force-app/main/default/objects/blng__CreditNote__c/fields/blng__Allocations__c.field-meta.xml
<CustomField>
    <fullName>blng__Allocations__c</fullName>
    <inlineHelpText>Montant alloué aux factures</inlineHelpText>
    <label>Allocations</label>
    <summarizedField>blng__CreditNoteLine__c.blng__Allocations__c</summarizedField>
    <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>