force-app/main/default/objects/blng__CreditNote__c/fields/blng__Debits__c.field-meta.xml
<CustomField>
    <fullName>blng__Debits__c</fullName>
    <description>Summation of net debit note allocations for this credit note</description>
    <inlineHelpText>Somme des allocations de note de débit pour cette note de crédit</inlineHelpText>
    <label>Debits</label>
    <summarizedField>blng__CreditNoteLine__c.blng__Debits__c</summarizedField>
    <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>