force-app/main/default/objects/blng__CreditNote__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <inlineHelpText>Statut actuel de la note de crédit. Cela peut être : Brouillon Publié Annulé</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PostingStatus</valueSetName>
    </valueSet>
</CustomField>